# disasternet

./: README.md  __init__.py  client.py  demo.py  inference.py  models.py  openenv.yaml  plot_results.py  pyproject.toml  requirements.txt  run_logs.txt  train_sentinel.py
results/: evaluation_results.json  training_log.json
server/: app.py  environment.py
